--- a/src/styles/projectbox.css
+++ b/src/styles/projectbox.css
@@ -64,7 +64,7 @@
   top: -150px;
   display: flex;
   justify-content: space-between;
-  z-index: 1;
+  z-index: 5;
 }
 .positionButtons {
   display: flex;
@@ -78,7 +78,7 @@
   height: 350px;
   width: 55vw;
   object-fit: contain;
-  z-index: 5;
+  z-index: 15;
   /* position: absolute; */
 }
 
